welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: not found: value n
  while(n<7*5){
        ^SnakeBuggle:4: error: not found: value n
    n=n+1
    ^